syntax = "proto3";
package pb;
option go_package = "internal/pb";

import "shared.proto";

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryList {
  repeated Category categories = 1;
}

message CategoryGetRequest {
  string id = 1;
}

service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
  rpc CreateCategoryStream(stream CreateCategoryRequest) returns (CategoryList) {}
  rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
  rpc ListCategories(Blank) returns (CategoryList) {}
  rpc GetCategory(CategoryGetRequest) returns (Category) {}
}